--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "node app.js",
-	"build": "webpack",
-	"start": "webpack-dev-server"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "author": "haodafan",
   "license": "ISC",
@@ -17,6 +17,8 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^2.30.1",
+    "webpack-dev-server": "^2.9.4"
   }
 }
